# agentic-rag-mcp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
deploy/aws/: README.md  app.py  requirements.txt  template.yaml
deploy/aws/.aws-sam/: build.toml
deploy/aws/corpus/: golden-datasets.md  llm-as-judge.md
deploy/k8s/: README.md  deployment.yaml  secret.example.yaml  service.yaml
docs/: architecture.md  index.html
evals/: README.md  dashboard.py  golden.yaml  promptfooconfig.yaml  provider.py  seed.py
evals/corpus/: evals-in-ci.md  groundedness.md
sql/: schema.sql
src/agentic_rag_mcp/: __init__.py  config.py  embeddings.py  graph.py  ingest.py  llm.py  nodes.py  server.py  state.py  store.py  tracing.py  web.py
tests/: test_smoke.py
